# Strategy

./: .gitignore  .gitmodules  Artillery.tscn  Body.cs  Body.gd  Cargo.toml  CircleHexMap.cs  CircleHexagonMapType.cs  Component.cs  Credits.txt  DemoEntities.tres  DummyUnit.tscn  Entity.cs  EntityContainer.cs  GameWorld.cs  GameWorld.gdns  HexField.tscn  HexMap.cs  HexMap.gdns  Hexagon.cs  Hexagon.gd  Hexagon.tscn  Hexagon.vs  HexagonCell.cs  HexagonCollider.tscn  HexagonMapType.cs  HexagonNode2D.cs  Map.tscn  MapUI.cs  PlayerData.cs  PopupMenu.tscn  Strategy.csproj  Strategy.sln  Strategy.tres  Tank.tscn  Unit.cs  Unit.tscn  dummy_unit.gdns  export_presets.cfg  hex_field.gdns  (+6 more)
Components/: Artillery.cs  Component.cs  ComponentPropertyChangedEventArgs.cs  ComponentPropertyChangedEventHandler.cs  Player.cs  Tank.cs  Unit.cs  UnitPosition.cs
Strategy.BlazorGL.Server/: Program.cs  Strategy.BlazorGL.Server.csproj  _Imports.razor
Strategy.DesktopGL/: Program.fs  Strategy.DesktopGL.fsproj  StrategyGame.fs
Strategy.FSharp/: Body.fs  DynamicNodes.fs  GameWorld.fs  HexMap.fs  Hexagon.fs  Input.fs  Library.fs  MapUI.fs  Nodes.fs  Player.fs  Strategy.FSharp.fsproj  Systems.fs  Unit.fs
Strategy.Game/: Artillery.cs  Field.cs  HexGrid.cs  Hexagon.cs  IGame.cs  Input.cs  Map.cs  MapUi.cs  Player.cs  PlayerData.cs  Strategy.Game.csproj  StrategyGame.cs  Tank.cs  Unit.cs  UnitPosition.cs
Strategy.Shared/: Content.targets  Strategy.Shared.projitems  Strategy.Shared.shproj
assets/: licenses_authors.txt
src/: components.rs  game_state.rs  gameworld.rs  hexfield.rs  hexgrid.rs  (+9 more)
(+63 files in other folders)
