[package]
name = "strategy"
version = "0.1.0"
authors = ["Karsten Bock <KarstenBock@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9.0-preview.0"
legion = { git = "https://github.com/tomgillen/legion.git" }
lazy_static = "1.4.0"
