[package]
name = "strategy"
version = "0.1.0"
authors = ["Karsten Bock <KarstenBock@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9.3"
#legion = "0.3.1" #{ git = "https://github.com/tomgillen/legion.git" }
bevy_app = "0.5.0"
bevy_ecs = "0.5.0"
bevy_tasks = "0.5.0"
#lazy_static = "1.4.0"
#crossbeam = "0.7.3"
#priority-queue = "1.0.0"